# project_starter_kit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  configure.bat  create.bat  options.cmake  setup.bat  third_party.txt
projects/: CMakeLists.txt
tools/: add_project.cmake  create_project.py  cuda.cmake  setup_cmake.bat  setup_python.bat  setup_vulkan.bat  third_party.cmake  third_party.txt  update_submodules.bat
tools/project_templates/: project.cmake
tools/project_templates/cinder/: TemplateApp.cpp  template.cpp
tools/project_templates/cinder_pch/: TemplateApp.cpp  pch.h
tools/project_templates/cpp/: TemplateApp.cpp  project.cmake
tools/project_templates/cpp_pch/: TemplateApp.cpp  pch.h
tools/project_templates/glfw/: project.cmake  template.cpp
tools/project_templates/glfw_imgui/: project.cmake  template.cpp
tools/project_templates/glfw_pch/: TemplateApp.cpp
tools/project_templates/glfw_vk/: project.cmake  template.cpp
tools/project_templates/glfw_vk_imgui/: project.cmake  template.cpp
tools/project_templates/qt6_test/: CMakeLists.txt  mainwindow.ui  project.cmake  template.cpp
tools/project_templates/sokol/: TemplateApp.cpp
tools/project_templates/sokol_pch/: TemplateApp.cpp  pch.h
tools/rive/: build_rive.bat
